PT05 - Memperbaiki apa yang diperlukan berdasarkan komen